--- a/translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json
@@ -25,7 +25,7 @@
   "iti83:14.1": "Che quella fede diventi stabile, ",
   "iti83:14.2": "radicata, sicura, ",
   "iti83:14.3": "e irremovibile per tutta la tua vita. ",
-  "iti83:14.4": " *** ",
+  "iti83:14.4": "nel buon Dhamma ben proclamato. ",
   "iti83:15.1": "Abbandona ogni cattivo comportamento corporale*** ",
   "iti83:15.2": "verbale* ",
   "iti83:15.3": "mentale* ",
