--- a/translation/de/sabbamitta/sutta/an/an10/an10.14_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.14_translation-de-sabbamitta.json
@@ -24,7 +24,7 @@
   "an10.14:5.4": "Er führt das geistliche Leben in der Hoffnung, in einer Klasse von Göttern wiedergeboren zu werden: ‚Dass ich doch durch diese Regel, dieses Gelübde, diese inbrünstige Bußübung oder dieses geistliche Leben einer der Götter werde!‘ ",
   "an10.14:5.5": "Wenn das so ist, neigt sein Geist nicht zu Ehrgeiz, Hingabe, Ausdauer und Mühe. ",
   "an10.14:5.6": "Das ist die fünfte seelische Kette, die nicht durchtrennt ist. ",
-  "an10.14:5.7": "Das sind die fünf seelischen Ketten, die sie nicht durchtrennt haben. ",
+  "an10.14:5.7": "Das sind die fünf seelischen Ketten, die nicht durchtrennt sind. ",
   "an10.14:6.1": "Wenn ein Mönch oder eine Nonne diese fünf Arten seelischer Öde nicht aufgegeben und diese fünf seelischen Ketten nicht durchtrennt haben, können sie bei tauglichen Eigenschaften Niedergang erwarten, kein Wachstum, bei Tag oder Nacht. ",
   "an10.14:7.1": "Wie der Mond in der dunklen Monatshälfte: Bei Tag und Nacht nehmen seine Schönheit, seine Rundung, sein Licht und sein Durchmesser stets ab. ",
   "an10.14:7.2": "Ebenso hat da ein Mönch oder eine Nonne diese fünf Arten seelischer Öde nicht aufgegeben und diese fünf seelische Ketten nicht durchtrennt. Er oder sie kann bei tauglichen Eigenschaften Niedergang erwarten, kein Wachstum, bei Tag oder Nacht. ",
