--- a/translation/de/sabbamitta/sutta/an/an10/an10.14_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.14_translation-de-sabbamitta.json
@@ -40,7 +40,7 @@
   "an10.14:10.5": "Wenn das so ist, neigt sein Geist zu Ehrgeiz, Hingabe, Ausdauer und Mühe. ",
   "an10.14:10.6": "Das ist die fünfte Art seelischer Öde, die aufgegeben ist. ",
   "an10.14:10.7": "Das sind die fünf Arten seelischer Öde, die aufgegeben sind. ",
-  "an10.14:11.1": "Was sind die fünf seelischen Ketten, die sie durchtrennt haben? ",
+  "an10.14:11.1": "Was sind die fünf seelischen Ketten, die durchtrennt sind? ",
   "an10.14:11.2": "Zunächst ist da ein Mönch frei von Begehren, Sehnen, Zuneigung, Durst, Leidenschaft und Verlangen nach Sinnenfreuden. ",
   "an10.14:11.3": "Wenn das so ist, neigt sein Geist zu Ehrgeiz, Hingabe, Ausdauer und Mühe. ",
   "an10.14:11.4": "Das ist die erste seelische Kette, die er durchtrennt hat. ",
