--- a/translation/de/sabbamitta/sutta/mn/mn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn16_translation-de-sabbamitta.json
@@ -8,7 +8,7 @@
   "mn16:1.5": "„Ehrwürdiger Herr“, antworteten sie. ",
   "mn16:1.6": "Der Buddha sagte: ",
   "mn16:2.1": "„Mönche und Nonnen, wenn bei einem Mönch fünf Arten seelischer Öde nicht aufgegeben und fünf seelische Ketten nicht durchtrennt sind, kann er bei tauglichen Eigenschaften Niedergang erwarten, kein Wachstum, bei Tag oder Nacht. ",
-  "mn16:3.1": "Was sind die fünf Arten seelischer Öde, die er nicht aufgegeben hat? ",
+  "mn16:3.1": "Was sind die fünf Arten seelischer Öde, die nicht aufgegeben sind? ",
   "mn16:3.2": "Zunächst hat da ein Mönch Zweifel am Lehrer. Er ist unsicher, unentschlossen und mutlos. ",
   "mn16:3.3": "Wenn das so ist, neigt sein Geist nicht zu Ehrgeiz, Hingabe, Ausdauer und Mühe. ",
   "mn16:3.4": "Das ist die erste Art seelischer Öde, die er nicht aufgegeben hat. ",
