--- a/translation/de/sabbamitta/sutta/mn/mn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn16_translation-de-sabbamitta.json
@@ -26,7 +26,7 @@
   "mn16:8.1": "Was sind die fünf seelischen Ketten, die nicht durchtrennt sind? ",
   "mn16:8.2": "Zunächst ist da ein Mönch nicht frei von Begehren, Sehnen, Zuneigung, Durst, Leidenschaft und Verlangen nach Sinnenfreuden. ",
   "mn16:8.3": "Wenn das so ist, neigt sein Geist nicht zu Ehrgeiz, Hingabe, Ausdauer und Mühe. ",
-  "mn16:8.4": "Das ist die erste seelische Kette, die er nicht durchtrennt hat. ",
+  "mn16:8.4": "Das ist die erste seelische Kette, die nicht durchtrennt ist. ",
   "mn16:9.1": "Dann ist da ein Mönch nicht frei von Begehren nach dem Körper … ",
   "mn16:9.2": "Das ist die zweite seelische Kette, die er nicht durchtrennt hat. ",
   "mn16:10.1": "Dann ist da ein Mönch nicht frei von Begehren nach Form … ",
