--- a/translation/de/sabbamitta/sutta/mn/mn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn16_translation-de-sabbamitta.json
@@ -28,7 +28,7 @@
   "mn16:8.3": "Wenn das so ist, neigt sein Geist nicht zu Ehrgeiz, Hingabe, Ausdauer und Mühe. ",
   "mn16:8.4": "Das ist die erste seelische Kette, die nicht durchtrennt ist. ",
   "mn16:9.1": "Dann ist da ein Mönch nicht frei von Begehren nach dem Körper … ",
-  "mn16:9.2": "Das ist die zweite seelische Kette, die er nicht durchtrennt hat. ",
+  "mn16:9.2": "Das ist die zweite seelische Kette, die nicht durchtrennt ist. ",
   "mn16:10.1": "Dann ist da ein Mönch nicht frei von Begehren nach Form … ",
   "mn16:10.2": "Das ist die dritte seelische Kette, die er nicht durchtrennt hat. ",
   "mn16:11.1": "Er isst sich ordentlich satt, bis sein Bauch voll ist, und schwelgt dann in den Freuden des Schlafens, Liegens und Dösens … ",
