--- a/translation/de/sabbamitta/sutta/mn/mn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn16_translation-de-sabbamitta.json
@@ -30,7 +30,7 @@
   "mn16:9.1": "Dann ist da ein Mönch nicht frei von Begehren nach dem Körper … ",
   "mn16:9.2": "Das ist die zweite seelische Kette, die nicht durchtrennt ist. ",
   "mn16:10.1": "Dann ist da ein Mönch nicht frei von Begehren nach Form … ",
-  "mn16:10.2": "Das ist die dritte seelische Kette, die er nicht durchtrennt hat. ",
+  "mn16:10.2": "Das ist die dritte seelische Kette, die nicht durchtrennt ist. ",
   "mn16:11.1": "Er isst sich ordentlich satt, bis sein Bauch voll ist, und schwelgt dann in den Freuden des Schlafens, Liegens und Dösens … ",
   "mn16:11.3": "Das ist die vierte seelische Kette, die er nicht durchtrennt hat. ",
   "mn16:12.1": "Er führt das geistliche Leben in der Hoffnung, in einer Klasse von Göttern wiedergeboren zu werden: ‚Dass ich doch durch diese Regel, dieses Gelübde, diese inbrünstige Bußübung oder dieses geistliche Leben einer der Götter werde!‘ ",
