--- a/translation/de/sabbamitta/sutta/mn/mn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn16_translation-de-sabbamitta.json
@@ -35,7 +35,7 @@
   "mn16:11.3": "Das ist die vierte seelische Kette, die nicht durchtrennt ist. ",
   "mn16:12.1": "Er führt das geistliche Leben in der Hoffnung, in einer Klasse von Göttern wiedergeboren zu werden: ‚Dass ich doch durch diese Regel, dieses Gelübde, diese inbrünstige Bußübung oder dieses geistliche Leben einer der Götter werde!‘ ",
   "mn16:12.2": "Wenn das so ist, neigt sein Geist nicht zu Ehrgeiz, Hingabe, Ausdauer und Mühe. ",
-  "mn16:12.3": "Das ist die fünfte seelische Kette, die er nicht durchtrennt hat. ",
+  "mn16:12.3": "Das ist die fünfte seelische Kette, die nicht durchtrennt ist. ",
   "mn16:12.4": "Das sind die fünf seelischen Ketten, die er nicht durchtrennt hat. ",
   "mn16:13.1": "Wenn ein Mönch diese fünf Arten seelischer Öde nicht aufgegeben und diese fünf seelischen Ketten nicht durchtrennt hat, ist es ganz unmöglich, dass er Wachstum, Zunahme oder Reife in dieser Lehre und Schulung erlangt. ",
   "mn16:14.1": "Wenn ein Mönch fünf Arten seelischer Öde aufgegeben und fünf seelische Ketten durchtrennt hat, ist es gut möglich, dass er Wachstum, Zunahme oder Reife in dieser Lehre und Schulung erlangt. ",
