--- a/translation/de/sabbamitta/sutta/mn/mn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn16_translation-de-sabbamitta.json
@@ -53,7 +53,7 @@
   "mn16:19.2": "Wenn das so ist, neigt sein Geist zu Ehrgeiz, Hingabe, Ausdauer und Mühe. ",
   "mn16:19.3": "Das ist die fünfte Art seelischer Öde, die aufgegeben ist. ",
   "mn16:19.4": "Das sind die fünf Arten seelischer Öde, die aufgegeben sind. ",
-  "mn16:20.1": "Was sind die fünf seelischen Ketten, die er durchtrennt hat? ",
+  "mn16:20.1": "Was sind die fünf seelischen Ketten, die durchtrennt sind? ",
   "mn16:20.2": "Zunächst ist da ein Mönch frei von Begehren, Sehnen, Zuneigung, Durst, Leidenschaft und Verlangen nach Sinnenfreuden. ",
   "mn16:20.3": "Wenn das so ist, neigt sein Geist zu Ehrgeiz, Hingabe, Ausdauer und Mühe. ",
   "mn16:20.4": "Das ist die erste seelische Kette, die er durchtrennt hat. ",
