--- a/translation/de/sabbamitta/sutta/mn/mn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn16_translation-de-sabbamitta.json
@@ -56,7 +56,7 @@
   "mn16:20.1": "Was sind die fünf seelischen Ketten, die durchtrennt sind? ",
   "mn16:20.2": "Zunächst ist da ein Mönch frei von Begehren, Sehnen, Zuneigung, Durst, Leidenschaft und Verlangen nach Sinnenfreuden. ",
   "mn16:20.3": "Wenn das so ist, neigt sein Geist zu Ehrgeiz, Hingabe, Ausdauer und Mühe. ",
-  "mn16:20.4": "Das ist die erste seelische Kette, die er durchtrennt hat. ",
+  "mn16:20.4": "Das ist die erste seelische Kette, die durchtrennt ist. ",
   "mn16:21.1": "Dann ist da ein Mönch frei von Begehren nach dem Körper … Das ist die zweite seelische Kette, die er durchtrennt hat. ",
   "mn16:22.1": "Er ist frei von Begehren nach Form … Das ist die dritte seelische Kette, die er durchtrennt hat. ",
   "mn16:23.1": "Er isst sich nicht ordentlich satt, bis sein Bauch voll ist, und schwelgt nicht in den Freuden des Schlafens, Liegens und Dösens … ",
