--- a/translation/de/sabbamitta/sutta/mn/mn16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn16_translation-de-sabbamitta.json
@@ -65,7 +65,7 @@
   "mn16:24.2": "Wenn das so ist, neigt sein Geist zu Ehrgeiz, Hingabe, Ausdauer und Mühe. ",
   "mn16:24.3": "Das ist die fünfte seelische Kette, die durchtrennt ist. ",
   "mn16:24.4": "Das sind die fünf seelischen Ketten, die durchtrennt sind. ",
-  "mn16:25.1": "Wenn ein Mönch diese fünf Arten seelischer Öde aufgegeben und diese fünf seelische Ketten durchtrennt hat, ist es gut möglich, dass er Wachstum, Zunahme oder Reife in dieser Lehre und Schulung erlangt. ",
+  "mn16:25.1": "Wenn bei einem Mönch diese fünf Arten seelischer Öde aufgegeben und diese fünf seelische Ketten durchtrennt sind, ist es gut möglich, dass er Wachstum, Zunahme oder Reife in dieser Lehre und Schulung erlangt. ",
   "mn16:26.1": "Er entwickelt die Grundlage übersinnlicher Kraft, die mit Versenkung durch Enthusiasmus und mit aktivem Bemühen einhergeht. ",
   "mn16:26.2": "Er entwickelt die Grundlage übersinnlicher Kraft, die mit Versenkung durch Energie und mit aktivem Bemühen einhergeht. ",
   "mn16:26.3": "Er entwickelt die Grundlage übersinnlicher Kraft, die mit Versenkung durch Entwicklung des Geistes und mit aktivem Bemühen einhergeht. ",
