--- a/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti63:4.2": "non presume che ci sia un oratore, ",
   "iti63:4.3": "ma toccata l'emancipazione della mente, ",
   "iti63:4.4": "lo stato di placidità più alto, ",
-  "iti63:5.1": "è uno che ha perfezionato il descrivibile. ",
+  "iti63:5.1": "è uno che ha perfezionato il descrivibile. (le cose descrivibili) ",
   "iti63:5.2": "Il placido saggio si delizia nello stato di placidità, ",
   "iti63:5.3": "un praticante (per uno che usa le parole) fermamente stabilito nel Dhamma che ha annoverato ",
   "iti63:5.4": "è uno che ha perfetta conoscenza e non può essere annoverato. "
