--- a/translation/it/soma/sutta/kn/iti/vagga7/iti68_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti68_translation-it-soma.json
@@ -1,6 +1,6 @@
 {
   "iti68:2.1": "“Cercatori, vi dico che chi non ha ancora abbandonato passione, odio, e illusione, ",
-  "iti68:2.2": "è imprigionato da Māra, è appeso al cappio della morte, è alla mercé del maligno. ",
+  "iti68:2.2": "è imprigionato da Māra, è appeso al cappio di Māra, è alla mercé del maligno. ",
   "iti68:2.3": "Mentre vi dico che chi le ha rimosse ",
   "iti68:2.4": "non è più imprigionato da Māra, ha slacciato il cappio della morte, non è più alla mercé del maligno. ",
   "iti68:3.1": "Chi ha dissipato passione, odio ",
