--- a/translation/it/soma/sutta/kn/iti/vagga7/iti69_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti69_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti69:2.4": "ha attraversato l’oceano con le sue onde, correnti, mulinelli, mostri e demoni. È andato oltre, ha raggiunto l’altra sponda, è un brahmano che sta all’impiedi sulla terra asciutta.” ",
   "iti69:3.1": "Chi ha dissipato passione, odio ",
   "iti69:3.2": "e ignoranza, ",
-  "iti69:3.3": "è riuscito ad attraversare questo oceano con i suoi mostri e demoni marini, ",
+  "iti69:3.3": "è riuscito ad attraversare questo oceano con i suoi mostri e demoni, ",
   "iti69:3.4": "le sue onde pericolose, difficili da superare. ",
   "iti69:4.1": "Ha superato ogni costrizione, ha abbandonato la morte, è senza senza base per la rinascita (senza acquisizione), ",
   "iti69:4.2": "ha abbandonato la sofferenza, non ritorna più a nuova esistenza. ",
