--- a/translation/de/sabbamitta/sutta/an/an6/an6.16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.16_translation-de-sabbamitta.json
@@ -5,7 +5,7 @@
   "an6.16:1.1": "Einmal hielt sich der Buddha im Land der Bhagger bei Krokodilhügel auf, im Wildpark bei Bhesakaḷās Wald. ",
   "an6.16:1.2": "Zu dieser Zeit nun war Nakulas Vater, der Hausbesitzer, mitgenommen, leidend, schwer krank. ",
   "an6.16:1.3": "Da sagte Nakulas Mutter, die Hausbesitzerin, zu ihm: ",
-  "an6.16:2.1": "„Hausbesitzer, mach dir, wenn du hinscheidest, keine Sorgen. ",
+  "an6.16:2.1": "„Hausbesitzer, stirb nicht mit Sorgen. ",
   "an6.16:2.2": "Solche Sorgen sind Leiden, ",
   "an6.16:2.3": "und sie werden vom Buddha getadelt. ",
   "an6.16:2.4": "Hausbesitzer, du denkst vielleicht: ",
