--- a/translation/de/sabbamitta/sutta/an/an6/an6.16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.16_translation-de-sabbamitta.json
@@ -13,7 +13,7 @@
   "an6.16:2.6": "Aber so sollst du es nicht sehen. ",
   "an6.16:2.7": "Ich habe Geschick beim Spinnen von Baumwolle und beim Kämmen von Wolle. ",
   "an6.16:2.8": "Ich bin in der Lage, die Kinder zu versorgen und für den Haushalt genug Teppiche zu haben. ",
-  "an6.16:2.9": "Daher, Hausbesitzer, mach dir, wenn du hinscheidest, keine Sorgen … ",
+  "an6.16:2.9": "Daher, Hausbesitzer, stirb nicht mit Sorgen. ",
   "an6.16:3.1": "Hausbesitzer, du denkst vielleicht: ",
   "an6.16:3.2": "‚Wenn ich nicht mehr da bin, wird Nakulas Mutter, die Hausbesitzerin, einen anderen Mann nehmen.‘ ",
   "an6.16:3.3": "Aber so sollst du es nicht sehen. ",
