--- a/translation/de/sabbamitta/sutta/an/an6/an6.16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.16_translation-de-sabbamitta.json
@@ -21,6 +21,7 @@
   "an6.16:3.3": "Aber so sollst du es nicht sehen. ",
   "an6.16:3.4": "Wir wissen beide, dass wir in den letzten sechzehn Jahren keusch im Haus gelebt haben. ",
   "an6.16:3.5": "Daher, Hausbesitzer, stirb nicht mit Sorgen. ",
+  "an6.16:3.6": "Solche Sorgen sind Leiden, ",
   "an6.16:4.1": "Hausbesitzer, du denkst vielleicht: ",
   "an6.16:4.2": "‚Wenn ich nicht mehr da bin, wird Nakulas Mutter, die Hausbesitzerin, den Buddha und seinen Saṅgha von Mönchen und Nonnen nicht mehr sehen wollen.‘ ",
   "an6.16:4.3": "Aber so sollst du es nicht sehen. ",
