--- a/translation/de/sabbamitta/sutta/an/an6/an6.16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.16_translation-de-sabbamitta.json
@@ -28,6 +28,7 @@
   "an6.16:4.3": "Aber so sollst du es nicht sehen. ",
   "an6.16:4.4": "Wenn du nicht mehr da bist, werde ich den Buddha und seinen Saṅgha sogar noch mehr sehen wollen. ",
   "an6.16:4.5": "Daher, Hausbesitzer, stirb nicht mit Sorgen. ",
+  "an6.16:4.6": "Mit Sorgen zu sterben, ist Leiden, ",
   "an6.16:5.1": "Hausbesitzer, du denkst vielleicht: ",
   "an6.16:5.2": "‚Wenn ich nicht mehr da bin, wird Nakulas Mutter, die Hausbesitzerin, ihr sittliches Verhalten nicht erfüllen.‘ ",
   "an6.16:5.3": "Aber so sollst du es nicht sehen. ",
