--- a/translation/de/sabbamitta/sutta/an/an6/an6.16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.16_translation-de-sabbamitta.json
@@ -37,6 +37,7 @@
   "an6.16:5.5": "Wer daran zweifelt, kann zum Buddha gehen und ihn fragen. Er hält sich im Land der Bhagger bei Krokodilhügel auf, im Wildpark bei Bhesakaḷās Wald. ",
   "an6.16:5.6": "Daher, Hausbesitzer, stirb nicht mit Sorgen. ",
   "an6.16:5.7": "Mit Sorgen zu sterben, ist Leiden, ",
+  "an6.16:5.8": "und es wird vom Buddha getadelt. ",
   "an6.16:6.1": "Hausbesitzer, du denkst vielleicht: ",
   "an6.16:6.2": "‚Nakulas Mutter, die Hausbesitzerin, besitzt nicht die innere Sammlung des Herzens.‘ ",
   "an6.16:6.3": "Aber so sollst du es nicht sehen. ",
