--- a/translation/de/sabbamitta/sutta/an/an6/an6.16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.16_translation-de-sabbamitta.json
@@ -44,6 +44,7 @@
   "an6.16:6.4": "Ich gehöre zu den weiß gekleideten Schülerinnen des Buddha, die die innere Sammlung des Herzens besitzen. ",
   "an6.16:6.5": "Wer daran zweifelt, kann zum Buddha gehen und ihn fragen. Er hält sich im Land der Bhagger bei Krokodilhügel auf, im Wildpark bei Bhesakaḷās Wald. ",
   "an6.16:6.6": "Daher, Hausbesitzer, stirb nicht mit Sorgen. ",
+  "an6.16:6.7": "Mit Sorgen zu sterben, ist Leiden, ",
   "an6.16:7.1": "Hausbesitzer, du denkst vielleicht: ",
   "an6.16:7.2": "‚Nakulas Mutter, die Hausbesitzerin, hat keine Grundlage gewonnen, hat keine feste Grundlage und keinen Trost in dieser Lehre und Schulung gefunden. Sie ist nicht über den Zweifel hinausgegangen, hat sich nicht von Unschlüssigkeit frei gemacht und kein Selbstvertrauen gewonnen. Sie ist in der Anleitung des Lehrers nicht von anderen unabhängig.‘ ",
   "an6.16:7.3": "Aber so sollst du es nicht sehen. ",
