--- a/translation/de/sabbamitta/sutta/an/an6/an6.16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an6/an6.16_translation-de-sabbamitta.json
@@ -52,7 +52,7 @@
   "an6.16:7.4": "Ich gehöre zu den weiß gekleideten Schülerinnen des Buddha, die eine Grundlage gewonnen haben, die eine feste Grundlage und einen Trost in dieser Lehre und Schulung gefunden haben. Ich bin über den Zweifel hinausgegangen, habe mich von Unschlüssigkeit frei gemacht und habe Selbstvertrauen gewonnen. Ich bin in der Anleitung des Lehrers von anderen unabhängig.‘ ",
   "an6.16:7.5": "Wer daran zweifelt, kann zum Buddha gehen und ihn fragen. Er hält sich im Land der Bhagger bei Krokodilhügel auf, im Wildpark bei Bhesakaḷās Wald. ",
   "an6.16:7.6": "Daher, Hausbesitzer, stirb nicht mit Sorgen. ",
-  "an6.16:7.7": "Solche Sorgen sind Leiden, ",
+  "an6.16:7.7": "Mit Sorgen zu sterben, ist Leiden, ",
   "an6.16:7.8": "und sie werden vom Buddha getadelt.“ ",
   "an6.16:8.1": "Und als Nakulas Mutter Nakulas Vater diese Unterweisung erteilte, klang seine Krankheit auf der Stelle ab. ",
   "an6.16:8.2": "Und so genas Nakulas Vater von dieser Krankheit. ",
