--- a/translation/it/soma/sutta/kn/iti/vagga9/iti87_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti87_translation-it-soma.json
@@ -7,7 +7,7 @@
   "iti87:3.1": "“Cercatori, questi tre pensieri benefici rischiarano la vista, danno la visione, creano sapienza, crescono la saggezza, dispongono alla non avversione e conducono al Nibbāna. ",
   "iti87:3.2": "Quali tre? ",
   "iti87:3.3": "Pensieri legati alla rinuncia, ",
-  "iti87:3.4": "al non essere ostili ",
+  "iti87:3.4": "al non essere ostili (avversi) ",
   "iti87:3.5": "e al non fare del male. ",
   "iti87:4.1": "Bisogna riflettere sui tre pensieri benefici ",
   "iti87:4.2": "e buttare via i tre nocivi. ",
