--- a/translation/it/soma/sutta/kn/iti/vagga9/iti87_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti87_translation-it-soma.json
@@ -12,7 +12,7 @@
   "iti87:4.1": "Bisogna riflettere sui tre pensieri benefici ",
   "iti87:4.2": "e buttare via i tre nocivi. ",
   "iti87:4.3": "Dopo averli vagliati, uno calma i propri pensieri ",
-  "iti87:4.4": "come l’acqua fa depositare una nube di polvere al suolo. ",
+  "iti87:4.4": "come una nube di polvere viene depositata al suolo dall’acqua. ",
   "iti87:4.5": "Quando si calmano i pensieri intenzionalmente, ",
   "iti87:4.6": "si ottiene così lo stato di pace.” "
 }
