--- a/translation/it/giovannizappa/sutta/mn/mn101_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn101_translation-it-giovannizappa.json
@@ -149,7 +149,7 @@
   "mn101:24.5": "“Sì, Signore. ",
   "mn101:24.6": "Perché questo? ",
   "mn101:24.7": "Perché quell’uomo è innamorato di quella donna, con desiderio e brama intensa” ",
-  "mn101:25.1": "‘Allora quell’uomo potrebbe pensare: ",
+  "mn101:25.1": "“Allora quell’uomo potrebbe pensare: ",
   "mn101:25.2": "‘Sono innamorato di quella donna, con desiderio e brama intensa. ",
   "mn101:25.3": "Quando l’ho vista con un altro uomo, chiacchierare, ridacchiare, e ridere, questo ha fatto sorgere in me tristezza, lamento, dolore, malinconia, e angoscia. ",
   "mn101:25.4": "Perché non abbandono il desiderio e la brama per quella donna?’ ",
