--- a/translation/it/giovannizappa/sutta/mn/mn101_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn101_translation-it-giovannizappa.json
@@ -277,7 +277,7 @@
   "mn101:46.7": "Se gli esseri viventi provano piacere e dolore a causa delle circostanze della natura, ",
   "mn101:46.8": "chiaramente il Realizzato è sorto da buone circostanze, dato che prova una felicità così incontaminata. ",
   "mn101:46.9": "Se gli esseri viventi provano piacere e dolore a causa della propria casta di rinascita, ",
-  "mn101:46.10": "chiaramente il Realizzato è nato in una bella casta, dato che prova una felicità così incontaminata. ",
+  "mn101:46.10": "chiaramente il Realizzato è nato in una buona casta, dato che prova una felicità così incontaminata. ",
   "mn101:46.11": "Se gli esseri viventi provano piacere e dolore a causa dello sforzo nella vita presente, ",
   "mn101:46.12": "chiaramente il Realizzato si sforza bene, dato che prova una felicità così incontaminata. ",
   "mn101:46.13": "Il Realizzato merita lode che sia vero o no che gli esseri viventi provano piacere e dolore a causa delle proprie azioni passate, ",
