--- a/translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json
@@ -26,7 +26,7 @@
   "iti83:14.2": "radicata, sicura, ",
   "iti83:14.3": "e irremovibile per tutta la tua vita. ",
   "iti83:14.4": "nel buon Dhamma ben proclamato. ",
-  "iti83:15.1": "Abbandona ogni cattivo comportamento corporea*** ",
+  "iti83:15.1": "Abbandona ogni cattivo comportamento con il corpo*** ",
   "iti83:15.2": "verbale* ",
   "iti83:15.3": "mentale* ",
   "iti83:15.4": "o dettato dalla rabbia,* ",
