--- a/translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json
@@ -27,7 +27,7 @@
   "iti83:14.3": "e irremovibile per tutta la tua vita. ",
   "iti83:14.4": "nel buon Dhamma ben proclamato. ",
   "iti83:15.1": "Abbandona ogni cattivo comportamento con il corpo*** ",
-  "iti83:15.2": "verbale* ",
+  "iti83:15.2": "con la parola* ",
   "iti83:15.3": "mentale* ",
   "iti83:15.4": "o dettato dalla rabbia,* ",
   "iti83:16.1": "e compi opere buone** ",
