--- a/translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json
@@ -29,7 +29,7 @@
   "iti83:15.1": "Avendo lasciato alle spalle una cattiva condotta con il corpo*** ",
   "iti83:15.2": "con la parola* ",
   "iti83:15.3": "e con la mente,* ",
-  "iti83:15.4": "in un modo ignorante e corrotto. ",
+  "iti83:15.4": "che è ignorante e corrotto, ",
   "iti83:16.1": "Compi opere buone,** ",
   "iti83:16.2": "dì molte parole buone** ",
   "iti83:16.3": "e pensa cose buone!** ",
