--- a/translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json
@@ -32,7 +32,7 @@
   "iti83:15.4": "che è ignorante e corrotto, ",
   "iti83:16.1": "Avendo compiuto opere buone,** ",
   "iti83:16.2": "dette molte parole buone** ",
-  "iti83:16.3": "e pensa cose buone!** ",
+  "iti83:16.3": "e pensato cose buone!** ",
   "iti83:16.4": "Con il sostegno di questo patrimonio spirituale ",
   "iti83:17.1": "illimitato e incommensurabile /merito che porta alla rinascita ",
   "iti83:17.2": "reso così immane da atti di generosità, ",
