--- a/translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json
@@ -36,7 +36,7 @@
   "iti83:16.4": "senza limiti, senza acquisizione, ",
   "iti83:17.1": "grazie a quel merito che porta alla rinascita ",
   "iti83:17.2": "reso così immane da atti di generosità, ",
-  "iti83:17.3": "altri esseri mortali ",
+  "iti83:17.3": "sostieni/consolida altri esseri mortali ",
   "iti83:17.4": "nel buon Dhamma e nella vita religiosa.’ ",
   "iti83:18.1": "È per via di questa compassione ",
   "iti83:18.2": "che i Deva ",
