--- a/translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json
@@ -38,7 +38,7 @@
   "iti83:17.2": "reso così immane da atti di generosità, ",
   "iti83:17.3": "sostieni/consolida altri esseri mortali ",
   "iti83:17.4": "nel buon Dhamma e nella vita religiosa.’ ",
-  "iti83:18.1": "È per via di questo compatire ",
+  "iti83:18.1": "È per via di questa compassione (compatire) ",
   "iti83:18.2": "che i Deva ",
   "iti83:18.3": "quando comprendono che un altro Deva sta per lasciarli, augurano: ",
   "iti83:18.4": "‘Ritorna qui di nuovo, Deva!’ "
