--- a/translation/it/soma/sutta/kn/iti/vagga8/iti72_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti72_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti72:2.1": "Cercatori, ci sono queste tre vie di fuga. ",
+  "iti72:2.1": "Cercatori, ci sono queste tre vie d’uscita. ",
   "iti72:2.2": "Quali tre? ",
   "iti72:2.3": "La via di fuga (d’uscita) dai piaceri dei sensi, ovvero la rinuncia; la via di fuga (d’uscita) dalle forme, ovvero l’amorfo [dalla materialità, ovvero l’immateriale (dalle forme fisiche, ovvero l’immaterialità / amorfo)]; la via di fuga (d’uscita) da qualsiasi cosa che è venuta in essere, creata, sorta in dipendenza, ovvero la cessazione. ",
   "iti72:3.1": "Avendo conosciuto la via di fuga (d’uscita) dai piaceri dei sensi ",
