--- a/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti70:2.1": "Cercatori, ho visto creature dotate di condotta* inappropriata* corporea*, verbale*, mentale*, (cattiva condotta con il corpo, con la parola e con la mente), che criticano le nobili persone, hanno una sbagliata visione delle cose e compiono azioni in base a questa visione delle cose sbagliata. ",
   "iti70:2.2": "Dopo la morte, quando il corpo perisce, rinascono in una cattiva destinazione, in uno stato di perdizione*, di dannazione*, all’inferno. ",
-  "iti70:3.1": "Cercatori, io non vi dico questo perché l’ho sentito da altri asceti o brahmani. ",
+  "iti70:3.1": "Cercatori, io non vi dico questo perché l’ho sentito dire da altri asceti o brahmani. ",
   "iti70:3.2": "",
   "iti70:3.3": "",
   "iti70:3.4": "Tutto quello che vi dico l’ho conosciuto, visto e compreso di persona. ",
